--- a/GarciaMariaPablo/src/main/resources/templates/admin/paginaPrincipal.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/paginaPrincipal.html
@@ -64,8 +64,8 @@
                                         <h5 class="card-title mt-2">Ver Incidencias</h5>
                                         <p class="card-text text-muted mb-4">Consultar todas las incidencias
                                             registradas.</p>
-                                        <a href="incidencia/listar.html" th:href="@{/templates/admin/incidencia}"
-                                           class="btn btn-outline-primary px-4">Ver</a>
+                                        <a href="incidencia/listar.html" th:href="@{/incidencias}"
+                                            class="btn btn-outline-primary px-4">Ver</a>
                                     </div>
                                 </div>
                             </div>
@@ -80,8 +80,8 @@
                                         <h5 class="card-title mt-2">Crear Incidencia</h5>
                                         <p class="card-text text-muted mb-4">Registrar una nueva incidencia en el
                                             sistema.</p>
-                                        <a href="incidencia/formulario.html" th:href="@{/templates/admin/incidencia/crear}"
-                                           class="btn btn-outline-success px-4">Crear</a>
+                                        <a href="incidencia/formulario.html" th:href="@{/incidencias/crear}"
+                                            class="btn btn-outline-success px-4">Crear</a>
                                     </div>
                                 </div>
                             </div>
@@ -95,8 +95,8 @@
                                         </div>
                                         <h5 class="card-title mt-2">Estadísticas</h5>
                                         <p class="card-text text-muted mb-4">Ver análisis y reportes de incidencias.</p>
-                                        <a href="incidencia/estadisticas.html" th:href="@{/templates/admin/incidencia/estadisticas}"
-                                           class="btn btn-outline-info px-4">Ver</a>
+                                        <a href="incidencia/estadisticas.html" th:href="@{/incidencias/estadisticas}"
+                                            class="btn btn-outline-info px-4">Ver</a>
                                     </div>
                                 </div>
                             </div>
@@ -128,8 +128,8 @@
                                         <h5 class="card-title mt-2">Listar Estados</h5>
                                         <p class="card-text text-muted mb-4">Consultar todos los estados disponibles.
                                         </p>
-                                        <a href="estado/listar.html" th:href="@{/templates/admin/estado}"
-                                           class="btn btn-outline-primary px-4">Ver</a>
+                                        <a href="estado/listar.html" th:href="@{/estados}"
+                                            class="btn btn-outline-primary px-4">Ver</a>
                                     </div>
                                 </div>
                             </div>
@@ -145,7 +145,7 @@
                                         <p class="card-text text-muted mb-4">Registrar un nuevo estado en el sistema.
                                         </p>
                                         <a class="btn btn-outline-success px-4" href="listarEstados.html"
-                                            th:href="@{/templates/admin/estado/crear}">
+                                            th:href="@{/estados/crear}">
                                             Crear
                                         </a>
                                     </div>
@@ -179,8 +179,8 @@
                                         <h5 class="card-title mt-2">Listar Usuarios</h5>
                                         <p class="card-text text-muted mb-4">Consultar todos los usuarios disponibles.
                                         </p>
-                                        <a href="usuario/listar.html" th:href="@{/templates/admin/usuario}"
-                                           class="btn btn-outline-primary px-4">Ver</a>
+                                        <a href="usuario/listar.html" th:href="@{/usuarios}"
+                                            class="btn btn-outline-primary px-4">Ver</a>
                                     </div>
                                 </div>
                             </div>
@@ -196,7 +196,7 @@
                                         <p class="card-text text-muted mb-4">Registrar un nuevo usuario en el sistema.
                                         </p>
                                         <a class="btn btn-outline-success px-4" href="usuario/formulario.html"
-                                            th:href="@{/templates/admin/usuario/crear}">
+                                            th:href="@{/usuarios/crear}">
                                             Crear
                                         </a>
                                     </div>
